# open-radar-data

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  make_registry.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml  pypi-release.yml
ci/: environment.yml
data/: 0308.ave  2013051000000600dBZ.vol  20220628072500_savevol_COSMO_LOOKUP_TEMP.nc  KLBB20160601_150025_V06  SUR210819000227.RAWKPJV  T_PAGZ35_C_ENMI_20170421090837.hdf  T_PAZA63_C_LFPW_20230420065041.h5  T_PAZA63_C_LFPW_20230420065541.h5  T_PAZB63_C_LFPW_20230420065125.h5  T_PAZB63_C_LFPW_20230420065624.h5  T_PAZC63_C_LFPW_20230420065228.h5  T_PAZC63_C_LFPW_20230420065727.h5  T_PAZD63_C_LFPW_20230420065331.h5  T_PAZD63_C_LFPW_20230420065831.h5  T_PAZE63_C_LFPW_20230420065446.h5  T_PAZE63_C_LFPW_20230420065946.h5  Z__C_RJTD_20230801200000_RDR_JMAGPV_RS47937_Gar0p250km0p70deg_PRkdp_N18_ANAL_cfrad.nc  Z__C_RJTD_20230801200000_RDR_JMAGPV_RS47937_Gar0p250km0p70deg_PRpsd_N18_ANAL_cfrad.nc  Z__C_RJTD_20230801200000_RDR_JMAGPV_RS47937_Gar0p250km0p70deg_PRref_N18_ANAL_cfrad.nc  Z__C_RJTD_20230801200000_RDR_JMAGPV_RS47937_Gar0p250km0p70deg_PRrhv_N18_ANAL_cfrad.nc  Z__C_RJTD_20230801200000_RDR_JMAGPV_RS47937_Gar0p250km0p70deg_PRvel_N18_ANAL_cfrad.nc  Z__C_RJTD_20230801200000_RDR_JMAGPV_RS47937_Gar0p250km0p70deg_PRvsw_N18_ANAL_cfrad.nc  Z__C_RJTD_20230801200000_RDR_JMAGPV_RS47937_Gar0p250km0p70deg_PRzdr_N18_ANAL_cfrad.nc  cfrad.20211011_201733.023_to_20211011_201745.299_DOW8_RHI.nc  cfrad.20211011_223602.712_to_20211011_223612.091_DOW8_RHI.nc  convsf.19990811.221202.cdf  cor-main131125105503.RAW2049  example_plot_ppi_single_sweep.nc  houkasacrcfrM1.a1.20210922.150006.nc  sample_rainbow_5_59.vol  sgpkazrgeC1.a1.20190529.000002.cdf  sgpxsaprcfrvptI4.a1.20200205.100827.nc
data/ARBUFR/: README.md
data/Guaviare.zarr/: .zattrs  .zmetadata
data/Guaviare.zarr/instrument_type/: .zarray  0
data/Guaviare.zarr/platform_type/: 0
data/Guaviare.zarr/radar_parameters/: .zattrs
data/Guaviare.zarr/sweep_2/: .zattrs
data/Guaviare.zarr/sweep_4/: .zattrs
data/Guaviare.zarr/time_coverage_end/: 0
data/Guaviare.zarr/time_coverage_start/: .zarray  0
open_radar_data/: __init__.py  dataset.py  registry.txt
open_radar_data/tests/: test_dataset.py
(+1308 files in other folders)
